--- a/spring-boot-microservice-currency-conversion/pom.xml
+++ b/spring-boot-microservice-currency-conversion/pom.xml
@@ -46,7 +46,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+		</dependency>
 	</dependencies>
+	
+	
 
 	<dependencyManagement>
 		<dependencies>
