--- a/spring-boot-microservice-currency-conversion/src/main/resources/application.properties
+++ b/spring-boot-microservice-currency-conversion/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=currency-conversion-service
 server.port=8100
 
 forex-service.ribbon.listOfServers=localhost:8000, localhost:8001
+
+eureka.client.server-url.default-zone=http://localhost:8761/eureka
